fix container height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -723,6 +723,17 @@ body {
   .player-icon.play-large {
     font-size: 24px;
   }
+
+  .container {
+    height: calc(100vh - 80px);
+    overflow-y: hidden;
+  }
+
+  .content {
+    height: 100%;
+    overflow-y: auto;
+    padding-bottom: 10px;
+  }
 }
 
 /*TABLET*/
